feat: board  getById
