# controllers/cardControllers/getCards.js
@@ -1,16 +1,11 @@
 import { getAllCards, countCards } from "../../services/cardService.js";
 
 export const getCards = async (req, res) => {
-  const { columnid: owner } = req.params;
-  const { label } = req.query;
-
-  const result = label
-    ? await getAllCards({ owner, label })
-    : await getAllCards({ owner });
-
-  const total = label
-    ? await getAllCards({ owner, label })
-    : await getAllCards({ owner });
+    const { _id: owner } = req.user;
+  const { columnId } = req.params;
+  
+  const result = await getAllCards({ owner, columnId });
+  const total = await countCards({ owner, columnId });
 
   res.json({
     result,
