# schemas/cardsSchemas.js
@@ -4,15 +4,17 @@ import { labelsList } from "../constants/cardConstants.js";
 export const createCardSchema = Joi.object({
   title: Joi.string().required(),
   description: Joi.string().required(),
-  label: Joi.string()
+  priority: Joi.string()
     .valid(...labelsList)
     .required(),
   deadline: Joi.string().required(),
+  columnId:Joi.string().required(),
 });
 
 export const updateCardSchema = Joi.object({
   title: Joi.string(),
   description: Joi.string(),
-  label: Joi.string().valid(...labelsList),
+  priority: Joi.string().valid(...labelsList),
   deadline: Joi.string(),
+  columnId:Joi.string(),
 });
